--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "description": "Make WhatsApp more easier to use",
     "permissions": ["storage", "tabs"],
-    "host_permissions": ["https://web.whatsapp.com/*"],
+    "host_permissions": ["https://web.whatsapp.com/*", "https://translate.google.com/*"],
     "background": {
       "service_worker": "background.js"
     },
