--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,13 @@
     "description": "Make WhatsApp more easier to use",
     "permissions": ["storage", "tabs"],
     "host_permissions": ["https://web.whatsapp.com/*", "https://translate.google.com/*"],
+    "icons": {
+      "16": "assets/whatsapp-booster16.png",
+      "32": "assets/whatsapp-booster32.png",
+      "48": "assets/whatsapp-booster48.png",
+      "128": "assets/whatsapp-booster128.png"
+    },
+
     "background": {
       "service_worker": "background.js"
     },
@@ -16,14 +23,19 @@
       }
     ],
 
+    "options_ui": {
+      "page": "options.html",
+      "open_in_tab": false
+    },
+
     "action": {
       "default_icon": {
-        "16": "assets/whatsapp-booster.png",
-        "24": "assets/whatsapp-booster.png",
-        "32": "assets/whatsapp-booster.png"
+        "16": "assets/whatsapp-booster16.png",
+        "32": "assets/whatsapp-booster32.png",
+        "48": "assets/whatsapp-booster48.png",
+        "128": "assets/whatsapp-booster128.png"
       },
-      "default_title": "WhatsApp Booster",
-      "default_popup": "popup.html"
+      "default_title": "WhatsApp Booster"
     },
     "manifest_version": 3
 }
